--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-
 <head>
 	<title>Smiri web</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<link rel="apple-touch-icon" sizes="57x57" href="images/fav/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="images/fav/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="images/fav/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="images/fav/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="images/fav/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="images/fav/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="images/fav/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="images/fav/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/fav/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="images/fav/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/fav/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="images/fav/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/fav/favicon-16x16.png">
+	<link rel="manifest" href="images/fav/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="images/fav/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -52,12 +64,12 @@
 		<section id="two" class="wrapper style3 fade-up">
 			<div class="inner">
 				<h2>What we do</h2>
-				<p>We provide a website building service, using either wordpress services or a premium bootstrap and HTML5 templates. the service is fairly fast, and the prices are really competitive</p>
+				<p>We provide a website building service, using either Wordpress services or a premium bootstrap and HTML5 templates. the service is fairly fast, and the prices are really competitive.</p>
 				<div class="features">
 					<section>
 						<span class="icon major fa-code"></span>
 						<h3>Taylored websites</h3>
-						<p>Unlike other services outhere, the website is built according to your preferences, you will chose your prefered template and it will be custumize entirely fllowing your wishes .</p>
+						<p>Unlike other services out here, the website is built according to your preferences, you will choose your preferred template and it will be customized entirely following your wishes.</p>
 					</section>
 					<section>
 						<span class="icon major fa-lock"></span>
@@ -66,42 +78,42 @@
 					</section>
 					<section>
 						<span class="icon major fa-cog"></span>
-						<h3>Sed erat ullam corper</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+						<h3>Configuration</h3>
+						<p>You may customize your website all that you need, you can include working email forms, google maps location, an upload service and many more features.</p>
 					</section>
 					<section>
 						<span class="icon major fa-desktop"></span>
-						<h3>Veroeros quis lorem</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+						<h3>Responsive design</h3>
+						<p>The website will adapt to every screen size, ensuring a great experience for desktop, tablet and mobile users.</p>
 					</section>
 					<section>
 						<span class="icon major fa-chain"></span>
-						<h3>Urna quis bibendum</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+						<h3>Support</h3>
+						<p>Unlike other services, you will benefit from an ongoing support to make changes to your website.</p>
 					</section>
 					<section>
 						<span class="icon major fa-diamond"></span>
-						<h3>Aliquam urna dapibus</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+						<h3>Great final product</h3>
+						<p>After all, a website si for your potential customers, and an eye candy, well designed, and fully responsive website will surely get their attention.</p>
 					</section>
 				</div>
-				<ul class="actions">
+				<!-- <ul class="actions">
 					<li><a href="#" class="button">Learn more</a></li>
-				</ul>
+				</ul> -->
 			</div>
 		</section>
 
 		<!-- One -->
 		<section id="one" class="wrapper style2 spotlights">
 			<section>
-				<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+				<a href="#" class="image"><img src="images/pic1.jpg" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>El Mehdi Smiri</h2>
 						<p>A computer science engineer, with a passion for web technologies, and a three year experience building web pages.
-						<br>In my team there is also two other collaborators, that realize original graphic design when needed.</p>
+						<br>In my team there are also two other collaborators, that realize original graphic design when needed.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn more</a></li>
+							<li><a href="#three" class="button scrolly">Learn more</a></li>
 						</ul>
 					</div>
 				</div>
@@ -136,10 +148,10 @@
 		<section id="three" class="wrapper style1 fade-up">
 			<div class="inner">
 				<h2>Get in touch</h2>
-				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+				<br>
 				<div class="split style1">
 					<section>
-						<form method="post" action="#">
+						<form method="post" action="https://formspree.io/smiriweb@outlook.com">
 							<div class="field half first">
 								<label for="name">Name</label>
 								<input type="text" name="name" id="name" />
@@ -164,8 +176,8 @@
 								<span>Madrid, Spain</span>
 							</li>
 							<li>
-								<h3>Email</h3>
-								<a href="#">smiriweb@outlook.com</a>
+								<h3>E-mail</h3>
+								<a href="mailto:smiriweb@outlook.com">smiriweb@outlook.com</a>
 							</li>
 							<li>
 								<h3>Phone</h3>
@@ -174,11 +186,11 @@
 							<li>
 								<h3>Social</h3>
 								<ul class="icons">
-									<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<!-- <li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li> -->
+									<li><a href="https://www.facebook.com/mehdi.smiri" class="fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://github.com/smiriwork" class="fa-github"><span class="label">GitHub</span></a></li>
+									<!-- <li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li> -->
+									<li><a href="https://www.linkedin.com/in/el-mehdi-smiri-344a5ab4?trk=nav_responsive_tab_profile" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</li>
 						</ul>
